modalWindow can load inner components. Add update word logic

--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -211,3 +211,8 @@ acitve link > color: #5af35d
   cursor: pointer;
   text-decoration: underline;
 }
+
+.english-word {
+  cursor: pointer;
+  text-decoration: underline;
+}
