--- a/WebSite/StaticContent/app/templates/components/addWord.html
+++ b/WebSite/StaticContent/app/templates/components/addWord.html
@@ -15,12 +15,13 @@
                         </span>
                     </div>
                     <div class="input-group">
-                        <input [formControl]="addWordform.controls['english']" type="text" class="form-control" (keyup.enter)="translate()"/>
+                        <input [formControl]="addWordform.controls['english']" type="text" 
+                            class="form-control" (keyup.enter)="translate()" (focusout)="focusOut()"/>
                         <span class="input-group-btn" style="width:0;">
                             <button class="btn btn-default"  type="button" (click)="translate()">
                                 <i class="fa fa-search" aria-hidden="true"></i>
                             </button>
-                        </span>		
+                        </span>
                     </div>
                     <br/>
                 </div>
