--- a/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
@@ -1,7 +1,7 @@
 <div>
     <div class="modal fade"  [attr.id]="modal_window_id">
         <div class="modal-dialog">
-            <div class="modal-content modal-sm">
+            <div class="modal-content {{windowSizeClass}}">
                 <div class="modal-header">
                     <button class="close" type="button" data-dismiss="modal" (click)="closeWindow()">
                         <i class="fa fa-close"></i>
@@ -12,7 +12,7 @@
                     <p *ngIf="!config.InnerComponent">{{config.BodyText}}</p>
                     <template #innerComponent></template>
                 </div>
-                <div *ngIf="config.IsCancelButton || config.IsApplyButton" class="modal-footer">
+                <div *ngIf="config.IsCancelButton || config.IsApplyButton" class="modal-window-footer">
                     <button *ngIf="config.IsApplyButton" class="btn btn-success tew-modal-button" 
                         type="button" data-dismiss="modal" (click)="applyWindow()">
                         {{config.ApplyButtonText}}
