move styles in APP

--- a/WebSite/StaticContent/app/templates/components/addWord.html
+++ b/WebSite/StaticContent/app/templates/components/addWord.html
@@ -69,7 +69,10 @@
                     <br/>
                 </div>
             </div>
-            <input type="submit" class="btn btn-success xs-visible center-block" [disabled]="!addWordform.valid" value="Add word"/>
+            <input type="submit"
+                class="btn btn-success xs-visible center-block add-word-button"
+                [disabled]="!addWordform.valid"
+                value="Add word"/>
         </div>
     </form>
 </div>
