--- a/WebSite/Views/Shared/_TewLayout.cshtml
+++ b/WebSite/Views/Shared/_TewLayout.cshtml
@@ -7,6 +7,7 @@
         <title>Tew</title>
 
         @Styles.Render("~/Content/css")
+        @Styles.Render("~/Content/tew")
         @Scripts.Render("~/bundles/modernizr")
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
