Add auth security

--- a/WebSite/StaticContent/app/templates/components/userStat.html
+++ b/WebSite/StaticContent/app/templates/components/userStat.html
@@ -3,7 +3,7 @@
     <ul>
         <li>User email: {{userStatModel.Email}}</li>
         <li>Words level: {{userStatModel.WordsLevel}}</li>
-        <li>Last activity date: {{userStatModel.LastActivityDate}}</li>
+        <!--<li>Last activity date: {{userStatModel.LastActivityDate}}</li>-->
     </ul>
 </div>
 <div>
