--- a/WebSite/StaticContent/app/templates/components/app.html
+++ b/WebSite/StaticContent/app/templates/components/app.html
@@ -12,11 +12,6 @@
                 </div>
                 <div class="collapse navbar-collapse" id="responsive-menu">
                     <ul class="nav navbar-nav responsive-menu ">
-                        <!--<li>
-                            <a routerLink="/home" routerLinkActive="active-menu-item">
-                                Home
-                            </a>
-                        </li>-->
                         <li>
                             <a routerLink="/add-word" routerLinkActive="active-menu-item">
                                 Add word
@@ -27,7 +22,7 @@
                                 My words
                             </a>
                         </li>
-                        <li class="dropdown">
+                        <li class="dropdown md-displayNone">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 Tests
                                 <b class="caret"></b>
@@ -42,6 +37,14 @@
                                     <a class="navbar-dropdown-menu-item" href="#/user-stat">Write test (not available)</a>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="md-displayBlock">
+                            <a  routerLink="/picker-test" routerLinkActive="active-menu-item">
+                                Picker test
+                            </a>
+                        </li>
+                        <li class="md-displayBlock">
+                            <a href="#/user-stat">Write test (not available)</a>
                         </li>
                          <li>
                             <a routerLink="/irregular-verbs" routerLinkActive="active-menu-item">
