--- a/WebSite/StaticContent/app/templates/components/app.html
+++ b/WebSite/StaticContent/app/templates/components/app.html
@@ -34,7 +34,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="navbar-dropdown-menu-item" href="#/user-stat">Write test (not available)</a>
+                                    <a class="navbar-dropdown-menu-item" routerLink="/write-test" routerLinkActive="active-menu-item">
+                                        Write test
+                                    </a>
                                 </li>
                             </ul>
                         </li>
@@ -44,7 +46,7 @@
                             </a>
                         </li>
                         <li class="md-displayBlock">
-                            <a href="#/user-stat">Write test (not available)</a>
+                            <a routerLink="/write-test">Write test</a>
                         </li>
                          <li>
                             <a routerLink="/irregular-verbs" routerLinkActive="active-menu-item">
