--- a/WebSite/StaticContent/app/scss/components/toolbar.scss
+++ b/WebSite/StaticContent/app/scss/components/toolbar.scss
@@ -59,7 +59,8 @@
                     }
 
                     &:hover {
-                        color: yellow;
+                        font-size: 22px;
+                        line-height: 22px;
                     }
                 }
             }
