--- a/WebSite/StaticContent/app/scss/components/selectableList.scss
+++ b/WebSite/StaticContent/app/scss/components/selectableList.scss
@@ -40,6 +40,11 @@
                 font-style: italic;
                 margin-right: 8px;
             }
+
+            &.active-list-item {
+                background-color: #737272 !important;
+                color: white;
+            }
         }
     }
 }
