--- a/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
@@ -1,28 +1,24 @@
-<div>
-    <div class="modal fade"  [attr.id]="modal_window_id">
-        <div class="modal-dialog">
-            <div class="modal-content {{windowSizeClass}}">
-                <div class="modal-header">
-                    <button class="close" type="button" data-dismiss="modal" (click)="closeWindow()">
-                        <i class="fa fa-close"></i>
-                    </button>
-                    <div class="modal-title tew-modal-title">{{config.HeaderText}}</div>
-                </div>
-                <div class="modal-body tew-modal-body">
-                    <p *ngIf="!config.InnerComponent">{{config.BodyText}}</p>
-                    <template #innerComponent></template>
-                </div>
-                <div *ngIf="config.IsCancelButton || config.IsApplyButton" class="modal-window-footer">
-                    <button *ngIf="config.IsApplyButton" class="btn btn-success tew-modal-button" 
-                        type="button" data-dismiss="modal" (click)="applyWindow()">
-                        {{config.ApplyButtonText}}
-                    </button>
-                    <button *ngIf="config.IsCancelButton" class="btn btn-danger tew-modal-button" 
-                        type="button" data-dismiss="modal" (click)="cancelWindow()">
-                        {{config.CancelButtonText}}
-                    </button> 
-                </div>
-            </div>
+<div class="modal-window">
+    <div class="modal-container">
+        <div class="modal-container__header">
+            <button class="close" (click)="closeWindow()">
+                <i class="fa fa-close"></i>
+            </button>
+            <div class="modal-container__header-title">{{config.HeaderText}}</div>
+        </div>
+        <div class="modal-container__body">
+            <p *ngIf="!config.InnerComponent">{{config.BodyText}}</p>
+            <template #innerComponent></template>
+        </div>
+        <div *ngIf="config.IsCancelButton || config.IsApplyButton" class="modal-container__footer">
+            <button *ngIf="config.IsApplyButton" class="btn btn-success modal-container__footer-button"
+                (click)="applyWindow()">
+                {{config.ApplyButtonText}}
+            </button>
+            <button *ngIf="config.IsCancelButton" class="btn btn-danger modal-container__footer-button"
+                (click)="cancelWindow()">
+                {{config.CancelButtonText}}
+            </button> 
         </div>
     </div>
 </div>
